--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <script type="module" src="script.js"></script>
   </head>
   <body>
-    Hello world bleeeee moooooooooooo DEMORA DO CARALHO seu cu cara de pau5555 oooooooooooooooooooooooooooooooi 89985652635416516546531536465165412+6516543215326153
-    212654651653156441561465415316513541651561651
-  </body>
+    Hello World
+  
 </html>
