--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <script type="module" src="script.js"></script>
   </head>
   <body>
-    Hello World
+    <h1>Hello World</h1>
+    <h2>Isso é uma página HTML!</h2>
+    <h3>A tag p cria uma nova linha</h3>
+    <a href="https://coding.edifyeducation.com.br">Eu sou um link!</a>
   </body>
 </html>
