--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
   </head>
   <body>
     <h1>Hello World</h1>
-    <h2>Isso é uma página HTML!</h2>
-    <h3>A tag p cria uma nova linha</h3>
-    <a href="https://coding.edifyeducation.com.br">Eu sou um link!</a>
+    <h2>This is na HTML page!</h2>
+    <h3>The p tag creates a new line</h3>
+    <a href="https://coding.edifyeducation.com.br">I am a link!</a>
+    <br><img src="IMG/Pollux.png" alt="Pollux com uma moeda na mão" height=100>
+    <br><img src="https://upload.wikimedia.org/wikipedia/commons/0/05/ISS067-E-66493_-_View_of_Earth.jpg" alt="Vista da Terra" height=200>
   </body>
 </html>
